--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: haxe
 
 haxe:
-    -development
+    - stable  # the latest stable release defined in https://haxe.org/download/list/
 
 script:
     -haxe build.hxml
